--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-project",
+  "homepage": "https://ali-shayesteh.github.io/vue-project/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,15 +11,19 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "postcss": "^8.4.32",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.0",
     "vite": "^4.4.11"
   }
 }
