--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@heroicons/vue": "^2.1.1",
+    "@tanstack/vue-table": "^8.11.6",
+    "faker": "^6.6.6",
+    "highcharts-vue": "^1.4.3",
+    "swiper": "^11.0.5",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-slick-carousel": "^1.0.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
